syntax = "proto3";

package catalog;

import "google/protobuf/timestamp.proto";

option go_package = "generated/user_service";

service UserService {
    rpc Signup (SignupRequest) returns (SignupResponse) {}
    rpc Signin (SigninRequest) returns (SigninResponse) {}
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
}

message SignupRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message SignupResponse {
    User user = 1;
}

message SigninRequest {
    string username = 1;
    string password = 2;
}

message SigninResponse {
    User user = 1;
    int32 session_id = 2;
    string access_token = 3;
    string refresh_token = 4;
    google.protobuf.Timestamp access_token_expires_at = 5;
    google.protobuf.Timestamp refresh_token_expires_at = 6;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    google.protobuf.Timestamp password_changed_at = 4;
    google.protobuf.Timestamp created_at = 5;
}
